--- a/views/user_input.erb
+++ b/views/user_input.erb
@@ -6,6 +6,12 @@
   </head>
   <body>
     <h1>Pig Latinizer</h1>
-  
+    <form method="post" action="/piglatinize">
+      <h1>Pig Latinizer!</h1>
+      <p>Enter your phrase:</p>
+      <textarea name="user_phrase"></textarea>
+      <br>
+      <button type="submit" value="submit">Submit</button>
+    </form>
   </body>
 </html>
